<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FindG</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="welcomeSplash">Welcome to FindG</string>
    <string name="one">one</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="rememberMe">Remember Me</string>
    <string name="empty">Empty</string>
    <string name="search">Search</string>

    <!--  Message -->
    <string name="msgWaitPlease">Please, wait</string>

    <!--  Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>

    <string name="action_select_image">Pick</string>
	<string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>

    <!-- Crop-->
    <string name="crop__done">DONE</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">CANCEL</string>

    <!-- Friend List-->
    <string name="frl_global_search">Global Search</string>
    <string name="frl_friends">Friends</string>
    <string name="frl_all_users">All Users</string>
    <string name="frl_no_friends">Oops…\nYou don\'t have any friends,\ntap search icon to find them \nor invite new ones.</string>
    <string name="frl_not_found_users">Sorry… no users</string>
    <string name="frl_pending_status">Waiting…</string>
    <string name="frl_pending_request_status">Pending contact request</string>
    <string name="frl_column_header_name_requests">Requests</string>
    <string name="frl_column_header_name_my_contacts">My Contacts</string>
    <string name="frl_column_header_name_all_users">All Users</string>
    <string name="frl_dlg_reject_friend">Do you really want to reject contact request from %1$s?</string>

    <!-- Friend Details-->
    <string name="frd_title">Details</string>
    <string name="frd_default_status">I enjoy using Q-municate!</string>
    <string name="frd_video_call">Video Call</string>
    <string name="frd_audio_call">Audio Call</string>
    <string name="frd_chat">Chat</string>
    <string name="frd_mobile">MOBILE</string>
    <string name="frd_dlg_remove_friend">Do you really want to delete %1$s from your contact list?</string>


</resources>
