<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
            android:layout_weight="0.17">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center"
                android:text="@string/welcome"
                android:id="@+id/lblLoginTitle"/>
    </FrameLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="172dp" android:layout_weight="0.25">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/username"
                android:id="@+id/lblUsername" android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" android:layout_marginStart="28dp"
                android:layout_marginTop="47dp"/>
        <EditText
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/txtUsername" android:layout_gravity="center_horizontal|top"
                android:layout_marginStart="29dp" android:layout_alignBottom="@+id/lblUsername"
                android:layout_toEndOf="@+id/lblUsername"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/password"
                android:id="@+id/lblPassword" android:layout_gravity="left|center_vertical"
                android:layout_centerVertical="true" android:layout_alignEnd="@+id/lblUsername"/>
        <EditText
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txtPassword" android:layout_gravity="center" android:layout_alignBottom="@+id/lblPassword"
                android:layout_alignStart="@+id/txtUsername"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/btnLogin" android:layout_gravity="center_horizontal|bottom"
                android:layout_alignParentBottom="true" android:layout_toStartOf="@+id/txtPassword"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/btnRegister" android:layout_gravity="right|bottom"
                android:layout_alignParentBottom="true" android:layout_toEndOf="@+id/btnLogin"
                android:layout_marginStart="33dp"/>
    </RelativeLayout>
</LinearLayout>